# Indian-Version-of-QuoDB-Site

./: .gitignore  README.md  package.json  pnpm-lock.yaml
apps/admin/: README.md  next.config.js  package.json
apps/admin/app/: layout.tsx  loginClient.tsx  page.tsx
apps/admin/app/contribute/: layout.tsx  page.tsx
apps/admin/app/dashboard/: dashboardClient.tsx  layout.tsx  page.tsx
apps/admin/components/: icons.tsx
apps/admin/components/Contribute/: FormDisplay.tsx  FormHandler.tsx
apps/admin/components/Forms/: addQuoteForm.tsx
apps/admin/components/Layout/: index.tsx
apps/admin/components/Navbar/: index.tsx
apps/admin/context/: form.tsx
apps/admin/libs/: auth.ts  data.ts  formData.ts  next-auth.d.ts  utils.ts
apps/admin/prisma/: schema.prisma
apps/admin/types/: index.ts
apps/main/: package.json
apps/main/app/: page.tsx  searchClient.tsx
apps/main/components/: back.tsx
apps/main/libs/: data.ts  utils.ts
apps/server/: Dockerfile  docker-compose.yml  elasticsearch.yml  main.py  package.json  pyproject.toml  wait-for-es.sh
apps/server/app/api/: __init__.py
apps/server/app/api/v1/: __init__.py  quote.py  translate.py
apps/server/app/core/: server.py
apps/server/app/core/controllers/: quote_controller.py  translate_controller.py
apps/server/app/core/models/: quote_model.py  translate_model.py
apps/server/app/core/services/: model_service.py  quote.py  translate_service.py
apps/server/app/core/workers/: celery_worker.py
apps/server/app/db/: elasticsearch.py
apps/server/app/db/indexes/: quote_index.py
(+23 files in other folders)
