[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Sayantan <sayantann2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.111.0"}
uvicorn = {extras = ["all"], version = "^0.30.1"}
elasticsearch = {extras = ["async"], version = "^8.14.0"}
pydantic-settings = "^2.3.3"
redis = "^5.0.6"
flower = "^2.0.1"
celery = "^5.4.0"
sentence-transformers = "^3.0.1"
pandas = "^2.2.2"
deep-translator = "^1.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
